--- a/hw2/q3/Makefile
+++ b/hw2/q3/Makefile
@@ -1,7 +1,7 @@
 
 CC=gcc
 
-all: maxloc maxloc_omp_parallelfor maxloc_omp_critical maxloc_omp_avoidcritical release
+all: maxloc maxloc_omp_parallelfor maxloc_omp_critical maxloc_omp_avoidcritical maxloc_omp_padding release
 
 maxloc: maxloc.c
 	$(CC) -o maxloc maxloc.c -lm
@@ -15,7 +15,11 @@ maxloc_omp_critical: maxloc_omp_critical.c
 maxloc_omp_avoidcritical: maxloc_omp_avoidcritical.c
 	$(CC) -o maxloc_omp_avoidcritical maxloc_omp_avoidcritical.c -fopenmp -lm
 
+maxloc_omp_padding: maxloc_omp_padding.c
+	$(CC) -o maxloc_omp_padding maxloc_omp_padding.c -fopenmp -lm
+
+
 RELEASE_DIR = /cfs/klemming/scratch/s/ssmos/hw2/q3/
-RELEASE_FILES = maxloc_omp_parallelfor maxloc_omp_critical maxloc_omp_avoidcritical maxloc run1.sh run2.sh
+RELEASE_FILES = maxloc_omp_parallelfor maxloc_omp_critical maxloc_omp_avoidcritical maxloc_omp_padding maxloc run1.sh run2.sh
 release: $(RELEASE_FILES)
 	for u in $(RELEASE_FILES); do echo $$u; cp -f $$u $(RELEASE_DIR); done
